--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Calculadora de investimento</title>
 </head>
 
-<body class="w-full h-[100dvh] grid grid-rows-2 grid-cols-3">
+<body class="w-full h-[100dvh] grid grid-rows-2 grid-cols-3 font-medium">
   <asid class="bg-zinc-700 text-emerald-600 row-span-2 flex flex-col justify-between py-5 px-2">
     <h1 class="text-2xl font-bold px-6">Calculadora de Investimentos</h1>
     <form class="w-full">
@@ -67,7 +67,7 @@
   <main>
     <p>Resultados</p>
   </main>
-  <script type="module" src="/script.js"></script>
+  <script type="module" src="/main.js"></script>
 </body>
 
 </html>
