--- a/index.html
+++ b/index.html
@@ -68,8 +68,17 @@
       <button class="w-1/2 rounded-lg hover:bg-zinc-900" id="clear-form">Limpar</button>
     </div>
   </asid>
-  <main>
-    <p>Resultados</p>
+  <main class="h-full ">
+    <section id="charts-container">
+      <div class="h-[36dvh]">
+        <p>Resultado Final</p>
+        <canvas id="final-money-distribution"></canvas>
+      </div>
+      <div class="h-[56dvh]">
+        <p>Progressão</p>
+        <canvas id="progression"></canvas>
+      </div>
+    </section>
   </main>
   <script type="module" src="/main.js"></script>
 </body>
