--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
       <button class="w-1/2 rounded-lg hover:bg-zinc-900" id="clear-form">Limpar</button>
     </div>
   </asid>
-  <main class="h-full ">
-    <section id="charts-container">
-      <div class="h-[36dvh]">
-        <p>Resultado Final</p>
+  <main class="row-span-2 col-span-2 ">
+    <section class="h-full" id="charts-container">
+      <div class="h-[36%] flex flex-col items-center pb-10">
+        <p class="font-bold text-lg">Resultado Final</p>
         <canvas id="final-money-distribution"></canvas>
       </div>
-      <div class="h-[56dvh]">
-        <p>Progressão</p>
+      <div class="h-[56%] flex flex-col items-center">
+        <p class="font-bold text-lg">Progressão</p>
         <canvas id="progression"></canvas>
       </div>
     </section>
