--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="w-full h-[100dvh] grid grid-rows-2 grid-cols-3 font-medium">
   <asid class="bg-zinc-700 text-emerald-600 row-span-2 flex flex-col justify-between py-5 px-2">
-    <h1 class="text-2xl font-bold px-6">Calculadora de Investimentos</h1>
+    <h1 class="text-2xl text-center font-bold px-6">Calculadora de Investimentos</h1>
     <form class="w-full" id="investment-form">
       <div class="flex w-full flex-col px-6 my-2  h-[4.25rem]">
         <label class="font-bold" for="starting-amount">Investimento inicial</label>
@@ -34,7 +34,7 @@
           <input class="w-4/6 rounded-l-lg pl-1.5" type="text" placeholder="0" required name="form-elements"
             id="time-amount">
           <select
-            class="w-2/6 rounded-r-lg text-center border-l-2 border-black hover:bg-black hover:text-emerald-600 focus:bg-black focus:text-emerald-600 cursor-pointer select-none"
+            class="w-2/6 rounded-r-lg text-center border-l-2 border-black hover:bg-zinc-800 hover:shadow-2xl hover:text-emerald-600 focus:bg-zinc-800 focus:text-emerald-600 cursor-pointer select-none"
             name="form-elements" id="time-amount-period">
             <option value="monthly">Mensal</option>
             <option value="yearly">Anual</option>
@@ -44,10 +44,10 @@
       <div class="flex w-full flex-col px-6 my-2  h-[4.25rem]">
         <label class="font-bold" for="return-rate">Rentabilidade</label>
         <div class="flex text-black">
-          <input class="w-1/6 text-center rounded-l-lg" type="text" value="%" disabled>
+          <input class="w-1/6 font-[750] text-center rounded-l-lg" type="text" value="%" disabled>
           <input class="w-3/6 pl-1.5" type="text" placeholder="0" required name="form-elements" id="return-rate">
           <select
-            class="w-2/6 rounded-r-lg text-center border-l-2 border-black hover:bg-black hover:text-emerald-600 focus:bg-black focus:text-emerald-600 cursor-pointer select-none"
+            class="w-2/6 rounded-r-lg text-center border-l-2 border-black hover:bg-zinc-800 hover:shadow-2xl hover:text-emerald-600 focus:bg-zinc-800 focus:text-emerald-600 cursor-pointer select-none"
             der="0.00" required name="form-elements" id="evaluation-period">
             <option value="monthly">Mensal</option>
             <option value="yearly">Anual</option>
@@ -57,19 +57,19 @@
       <div class="flex w-full flex-col px-6 my-2  h-[4.25rem]">
         <label class="font-bold" for="tax-rate">Impostos sobre lucro</label>
         <div class="flex text-black">
-          <input class="w-1/6 text-center rounded-l-lg" type="text" value="%" disabled>
+          <input class="w-1/6 font-[750] text-center rounded-l-lg" type="text" value="%" disabled>
           <input class="w-5/6 rounded-r-lg pl-1.5" type="text" placeholder="0" name="form-elements" id="tax-rate">
         </div>
       </div>
     </form>
     <div class="flex h-12 px-6 my-8 w-full gap-2">
-      <button class="w-1/2 rounded-lg bg-black text-emerald-600 hover:bg-zinc-950" type="submit" form="investment-form"
+      <button class=" w-1/2 rounded-lg bg-black text-emerald-600 hover:bg-zinc-950" type="submit" form="investment-form"
         id="calculate-results">Calcular</button>
       <button class="w-1/2 rounded-lg hover:bg-zinc-900" id="clear-form">Limpar</button>
     </div>
   </asid>
-  <main class="row-span-2 col-span-2 ">
-    <section class="h-full" id="charts-container">
+  <main class="row-span-2 col-span-2">
+    <!-- <section class="h-full" id="charts-container">
       <div class="h-[36%] flex flex-col items-center pb-10">
         <p class="font-bold text-lg">Resultado Final</p>
         <canvas id="final-money-distribution"></canvas>
@@ -78,6 +78,11 @@
         <p class="font-bold text-lg">Progressão</p>
         <canvas id="progression"></canvas>
       </div>
+    </section> -->
+    <section class="h-full overflow-y-auto" id="table-container">
+      <p class="font-bold text-lg bg-neutral-400 text-center">Resultados Mensais</p>
+      <table class="w-full max-h-full border border-separate" id="results-table">
+      </table>
     </section>
   </main>
   <script type="module" src="/main.js"></script>
