--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
   <title>Calculadora de investimento</title>
 </head>
 
-<body class="w-full h-[100dvh] grid grid-rows-2 grid-cols-3 font-medium box-content">
-  <aside class="bg-zinc-700 text-emerald-600 row-span-2 col-span-1 flex flex-col justify-between py-5 px-2">
+<body
+  class="w-full h-[100dvh] grid grid-rows-2 grid-cols-3 font-medium box-content transition-all ease-out duration-300">
+  <aside
+    class="relative bg-emerald-400 text-zinc-900 dark:bg-zinc-700 dark:text-emerald-600 row-span-2 col-span-1 flex flex-col justify-between py-5 px-2">
+    <button class="absolute top-5 right-6 w-10 h-10 rounded-xl text-2xl bg-black text-white " id="dark-mode-button"><i
+        class="fa-sharp fa-solid fa-sun"></i></button>
+    <button class="absolute top-5 right-6 w-10 h-10 rounded-xl text-2xl bg-black text-white hidden"
+      id="white-mode-button"><i class="fa-sharp fa-solid fa-moon"></i></button>
     <h1 class="text-2xl text-center font-bold px-6">Calculadora de Investimentos</h1>
     <form class="w-full" id="investment-form">
       <div class="flex w-full flex-col px-6 my-2  h-[4.25rem] mb-5">
@@ -34,7 +40,7 @@
           <input class="w-4/6 rounded-l-lg pl-1.5" type="text" placeholder="0" required name="time-amount"
             id="time-amount">
           <select
-            class="w-2/6 rounded-r-lg text-center border-l-2 border-black hover:bg-zinc-800 hover:shadow-2xl hover:text-emerald-600 focus:bg-zinc-800 focus:text-emerald-600 cursor-pointer select-none"
+            class="w-2/6 rounded-r-lg text-center border-l-2 border-black hover:bg-zinc-600 dark:hover:bg-zinc-800 hover:shadow-2xl hover:text-emerald-300 dark:hover:text-emerald-600 focus:bg-zinc-600 dark:focus:bg-zinc-800 focus:text-emerald-300 dark:focus:text-emerald-600 cursor-pointer select-none"
             name="form-elements" id="time-amount-period">
             <option value="monthly">Mensal</option>
             <option value="yearly">Anual</option>
@@ -47,7 +53,7 @@
           <input class="w-1/6 font-[750] text-center rounded-l-lg" type="text" value="%" disabled>
           <input class="w-3/6 pl-1.5" type="text" placeholder="0" required name="return-rate" id="return-rate">
           <select
-            class="w-2/6 rounded-r-lg text-center border-l-2 border-black hover:bg-zinc-800 hover:shadow-2xl hover:text-emerald-600 focus:bg-zinc-800 focus:text-emerald-600 cursor-pointer select-none"
+            class="w-2/6 rounded-r-lg text-center border-l-2 border-black hover:bg-zinc-600 dark:hover:bg-zinc-800 hover:shadow-2xl hover:text-emerald-300 dark:hover:text-emerald-600 focus:bg-zinc-600 dark:focus:bg-zinc-800 focus:text-emerald-300 dark:focus:text-emerald-600 cursor-pointer select-none"
             der="0.00" required name="form-elements" id="evaluation-period">
             <option value="monthly">Mensal</option>
             <option value="yearly">Anual</option>
@@ -63,9 +69,10 @@
       </div>
     </form>
     <div class="flex h-12 px-6 my-8 w-full gap-2">
-      <button class="w-1/2 rounded-lg ease-out duration-300  bg-black text-emerald-600 hover:bg-zinc-950" type="submit"
-        form="investment-form" id="calculate-results">Calcular</button>
-      <button class="w-1/2 rounded-lg transition-all ease-out duration-300  hover:bg-zinc-900"
+      <button
+        class="w-1/2 rounded-lg ease-out duration-300 bg-black dark:bg-black text-emerald-500 dark:text-emerald-600 hover:bg-zinc-800 dark:hover:bg-zinc-950"
+        type="submit" form="investment-form" id="calculate-results">Calcular</button>
+      <button class="w-1/2 rounded-lg transition-all ease-out duration-300 hover:bg-emerald-700 dark:hover:bg-zinc-900"
         id="clear-form">Limpar</button>
     </div>
   </aside>
@@ -74,7 +81,7 @@
       class="absolute top-1/2 left-0 text-6xl bg-slate-200 opacity-50 w-8 transition-all ease-out duration-300 hover:opacity-100 focus:opacity-100 max-h-20 rounded-r-xl hidden"
       id="slide-arrow-previous"><i class="fa-sharp fa-solid fa-caret-left " style="color: #555;"></i></button>
     <button
-      class="absolute top-1/2 right-0 text-6xl bg-slate-200 opacity-50 w-8 transition-all ease-out duration-300  hover:opacity-100 focus:opacity-100 max-h-20 rounded-l-xl "
+      class="absolute top-1/2 right-0 text-6xl bg-slate-200 opacity-50 w-8 transition-all ease-out duration-300  hover:opacity-100 focus:opacity-100 max-h-20 rounded-l-xl hidden"
       id="slide-arrow-next"><i class="fa-sharp fa-solid fa-caret-right " style="color: #555;"></i></button>
     <div class="h-full w-full flex overflow-x-hidden scroll-smooth" id="carousel">
       <section class="flex flex-col h-full basis-full shrink-0" id="charts-container">
@@ -88,11 +95,11 @@
         </div>
         <div class="h-[34%] w-full flex flex-col items-center pb-10">
           <p class="font-bold text-lg">Resultado Final</p>
-          <canvas class="w-full" id="final-money-distribution"></canvas>
+          <canvas id="final-money-distribution"></canvas>
         </div>
         <div class="h-[54%] w-full flex flex-col items-center">
           <p class="font-bold text-lg">Progressão</p>
-          <canvas class="w-full" id="progression"></canvas>
+          <canvas id="progression"></canvas>
         </div>
       </section>
       <section class="h-full basis-full shrink-0 overflow-y-auto" id="table-container">
